--- a/votaUnicamp.Rmd
+++ b/votaUnicamp.Rmd
@@ -1,50 +1,32 @@
 ---
 title: "Vota Unicamp!"
-author: Ana Flávia Polisel, Bruna Mendes Heyn, Eliane Ramos de Siqueira, Gustavo Cordeiro,
-  Michely Wu Hsieh e Natalia Rodrigues da Silva
-output:
-  html_document:
-    fig_caption: yes
-    force_captions: yes
-    highlight: pygments
-    number_sections: yes
-    theme: cerulean
-  pdf_document: default
-subtitle: Relatório Final
-csl: mee.csl
+author: "Benilton S Carvalho"
+output: html_document
 ---
 
-##Introdução  e objetivo
-    As universidades estaduais paulistas tem vivido momentos de grande tensão desde que teve inicio uma greve geral dos estudantes que têm como objetivo revindicar pautas como a implementação de cotas etnico-raciais, a ampliação da moradia estudantil e a negociação a respeito dos cortes orçamentarios anunciados pelo governo do estado. Desde o dia 10/05 as intalações da reitoria e da pró-reitoria das UNICAMP foram ocupadas por estudantes e assim permanecem a atual data, mesmo após mandados judiciais de desocupação e ameaças de reintegrção de posse por parte da Policia Militar.
-    Além do movimento geral de greve e da ocupação existem movimentos grevistas dentro de cada um dos institutos. A decisão a respeito do apoio, ou não a greve nessa instância é, então, feita através de assembléias, que são reuniões organizadas pelo centro acadêmico de cada instituto, os quais são formados por alunos do mesmo.
-    O problema começa quando estudantes e docentes passam a questionar a representatibilidade das assembléias já que, devido as atividades e cronogramas acadêmicos a serem cumpridos, muitos dos estudantes contrários a greve não abrem mão de seus afazeres para comparecerem a tais reuniões, o que faz com que estas contem com um número reduzido de alunos que, em sua maioria, votam a favor.
-    Diante desse problema o site "votaunicamp" foi criado com a intenção de conhecer a verdadeira opinião dos estudantes da universidade Estadual de Campinas em relação a pauta da greve estudantil através de uma votação online. A metodologia do site é segura por permitir que cada aluno vote uma unica vez, descartando, então, o risco de que a votação seja fraudada. Na pesquisa os votos são classificados em: "Sim","Não","Abstenção". Além disso, os alunos podem justificar seus votos. 
-    O projeto final de ME524 tem como objetivo fazer uma análise descritiva dos dados presentes no site "votaunicamp". Para fazer tal estudo utilizaremos como ferramentas gráficos e tabelas obtidos a partir dos dados presentes no site.
-    
-```{r input, message=FALSE, echo=FALSE}
 ## Setup
+
+```{r input, message=FALSE}
 Sys.setlocale(locale='UTF-8')
 library(stringr)
 library(rvest)
 library(googleVis)
 library(leaflet)
-library(pracma)
-page = read_html('https://votaunicamp.herokuapp.com/prev_results/', encoding='UTF-8')
+page = read_html('http://votaunicamp.herokuapp.com/results/', encoding='UTF-8')
 tbl = html_table(page)[[2]]
-names(tbl)=c("Curso","Total","Sim","Abstenções","Não")
-tbl$Curso=repair_encoding(tbl$Curso)
-#head(tbl)
+head(tbl)
 ```
 
-```{r format, echo=FALSE}
-## Formatação de Dados
+## FormataÃ§Ã£o de Dados
+
+```{r format}
 mytbl = data.frame(codigo=as.integer(str_extract(tbl$Curso, "^\\d+")),
-nivel=NA,
-curso=gsub("^(\\d+) - (.*)$", "\\2", tbl$Curso),
-total=tbl$Total,
-sim=as.integer(str_extract(tbl$Sim, "^\\d+")),
-nao=as.integer(str_extract(tbl$Não, "^\\d+")),
-abstencao=as.integer(str_extract(tbl$Abstenções, "^\\d+")))
+                   nivel=NA,
+                   curso=gsub("^(\\d+) - (.*)$", "\\2", tbl$Curso),
+                   total=tbl$Total,
+                   sim=as.integer(str_extract(tbl$Sim, "^\\d+")),
+                   nao=as.integer(str_extract(tbl$NÃ£o, "^\\d+")),
+                   abstencao=as.integer(str_extract(tbl$AbstenÃ§Ãµes, "^\\d+")))
 nivel = str_extract(mytbl$curso, "(Dou|Mes)[a-z]+")
 nivel[grepl("Mes", nivel)] = "Mestrado"
 nivel[grepl("Dou", nivel)] = "Doutorado"
@@ -52,517 +34,39 @@ nivel[is.na(nivel)] = "Graduacao"
 mytbl$nivel = nivel
 rm(nivel)
 mytbl$curso = gsub("(Mes|Dou).+ em (.*)$", "\\2", mytbl$curso)
-#head(mytbl)
+head(mytbl)
 ```
 
-##Tabela de Dados Original
+## Gauge Plots
 
-Essa tabela apresenta todos os dados presentes no site dividos em sete categorias: 
-Código do curso, nível do curso, nome do curso, total de votos, número de sim, número de não e número de abstenção.
-
-```{r tabela de dados, echo=FALSE}
-library(DT)
-datatable(mytbl, options = list(pageLength = 10))
-```
-
-##Análises
-
-###Análise da Graduação por Áreas
-
-Na tabela abaixo, foi adicionada uma coluna com a àrea correspondente de cada curso, e duas colunas com as proporções de votos favoráveis e não favoráveis á greve, respectivamente.
-
-```{r separacao_areas, echo=FALSE}
-library(dplyr)
-graduacao=filter(mytbl, nivel=="Graduacao")
-#*#ARTES,
-artes=filter(graduacao,codigo=="26"|codigo=="25"|codigo=="64"|codigo=="23"|codigo=="22")
-#*#PROGRAMAS, ESPECIAIS
-pespeciais=filter(graduacao,codigo=="200")
-#*#BIOLOGICAS,
-biologicas=filter(graduacao,codigo=="6"|codigo=="100"|codigo=="27"|codigo=="45"|codigo=="21"|codigo=="63"|codigo=="58"|codigo=="46"|codigo=="15"|codigo=="107"|codigo=="14")
-#*#HUMANAS,
-humanas=filter(graduacao,codigo=="109"| codigo=="110"| codigo=="17"| codigo=="47"| codigo=="16"|codigo=="44"| codigo=="75"|codigo=="30"| codigo=="54"| codigo=="55"|codigo=="19"|codigo=="7"|codigo=="57"|codigo=="56"|codigo=="18"|codigo=="20"|codigo=="38")
-##*EXATAS,
-exatas=filter(graduacao,codigo=="48"|codigo=="42"|codigo=="36"|codigo=="83"|codigo=="73"|codigo=="87"|codigo=="8"|codigo=="89"|codigo=="12"|codigo=="13"|codigo=="43"|codigo=="34"|codigo=="49"|codigo=="101"|codigo=="102"|codigo=="88"|codigo=="11"|codigo=="41"|codigo=="108"|codigo=="10"|codigo=="9"|codigo=="39"|codigo=="2"|codigo=="4"|codigo=="53"|codigo=="40"|codigo=="29"|codigo=="1"|codigo=="28"|codigo=="51"|codigo=="5"|codigo=="50"|codigo=="94")
-
-#*#adicionando coluna de área
-library(dplyr)
-exatas<-mutate(exatas,Area="Exatas")
-biologicas<-mutate(biologicas,Area="Biológicas")
-humanas<-mutate(humanas,Area="Humanas")
-artes<-mutate(artes,Area="Artes")
-pespeciais<-mutate(pespeciais,Area="Programas Especiais")
-
-tabelageral=rbind(exatas,biologicas,humanas,artes,pespeciais)
-
-##criando novas colunas com proporções
-tabelageral<-mutate(tabelageral,"Proporção de Sim"=round((tabelageral$sim/tabelageral$total),3))
-tabelageral<-mutate(tabelageral,"Proporção de Não"=round((tabelageral$nao/tabelageral$total),3))
-
-library(DT)
-datatable(tabelageral, options = list(pageLength = 10))
-```
-
-### Gráficos
-Abaixo, organizamos os dados, já separados por área, em uma tabela e em um gráfico nos quais podemos ver a proporção de votos sim, não e abstençao em cada uma delas. A intensão é que, através disso, possamos avaliar se a área do curso de cada aluno que respondeu a pesquisa influencia, ou não, na sua opinião a respeito da greve.
-
-```{r, message=FALSE, echo=FALSE}
-
-pexatass=round((sum(exatas$sim)/sum(exatas$total)),3)
-pexatasn=round(sum(exatas$nao)/sum(exatas$total),3)
-pexatasa=round(sum(exatas$abstencao)/sum(exatas$total),3)
-phumanass=round(sum(humanas$sim)/sum(humanas$total),3)
-phumanasn=round(sum(humanas$nao)/sum(humanas$total),3)
-phumanasa=round(sum(humanas$abstencao)/sum(humanas$total),3)
-pbiologicass=round(sum(biologicas$sim)/sum(biologicas$total),3)
-pbiologicasn=round(sum(biologicas$nao)/sum(biologicas$total),3)
-pbiologicasa=round(sum(biologicas$abstencao)/sum(biologicas$total),3)
-partess=round(sum(artes$sim)/sum(artes$total),3)
-partesn=round(sum(artes$nao)/sum(artes$total),3)
-partesa=round(sum(artes$abstencao)/sum(artes$total),3)
-ppespeciaiss=round(sum(pespeciais$sim)/sum(pespeciais$total),3)
-ppespeciaisn=round(sum(pespeciais$nao)/sum(pespeciais$total),3)
-ppespeciaisa=round(sum(pespeciais$abstencao)/sum(pespeciais$total),3)
-  
-proporcaoarea<-matrix(c(pexatass,pexatasn,pexatass,phumanass,phumanasn,phumanasa,pbiologicass,pbiologicasn,pbiologicasa,partess,partesn,partesa,ppespeciaiss,ppespeciaisn,ppespeciaisa), nrow = 3, ncol=5)
-
-
-colnames(proporcaoarea) = c("Exatas", "Humanas", "Biológicas", "Artes", "P. Especiais")
-rownames(proporcaoarea)= c("Prop. Sim", "Prop. Não", "Prop. Abstenção")
-
-library(DT)
-datatable(proporcaoarea, options = list(pageLength = 10))
-``` 
-
-```{r, echo=FALSE}
-barplot(proporcaoarea,beside = TRUE, names.arg=c("Exatas","Humanas","Biológicas","Artes","P. Especiais"),main = "Comparativo das proporções de Votos por Área", ylab = "Proporção de Votos", xlab = "Áreas", legend=colnames(exatas[5:7]),col=c("gray","darkblue","lightblue"))
-
-```
-
-Analisando o gráfico vemos que nas áreas de exatas, humanas, biológicas e programas especiais a maioria dos alunos que votaram  expressaram opiião contrária a greve, enquanto na área artística a grande maioria se posicionou a favor do movimento.
-
-###Análise da Graduação por Instituto
-
-Na tabela abaixo organizamos os cursos de graduação de acordo com o isntituto ao qual cada um pertence. Utilizaremos esta tabela como base para gerar gráficos nos quais poderemos comparar a proporção de votos em cada um dos institutos.
-
-```{r separando os institutos, echo=FALSE}
-library(dplyr)
-IMECC = filter(graduacao,codigo=="1"|codigo=="2"|codigo=="28"|codigo=="29")
-FEM = filter(graduacao,codigo=="10"|codigo=="49")
-FCA = filter(graduacao,codigo=="100"|codigo=="107"|codigo=="101"|codigo=="102"|codigo=="110"|codigo=="109")
-IFGW = filter(graduacao,codigo=="4"|codigo=="108"|codigo=="40"|codigo=="51")
-IFCH = filter(graduacao,codigo=="19"|codigo=="30"|codigo=="44"|codigo=="16")
-FEEC = filter(graduacao,codigo=="11"|codigo=="41")
-FEC = filter(graduacao,codigo=="12"|codigo=="48")
-FOP = filter(graduacao,codigo=="14")
-FEA = filter(graduacao,codigo=="13"|codigo=="43")
-FCM = filter(graduacao,codigo=="15"|codigo=="58")
-IE = filter(graduacao,codigo=="17"|codigo=="47")
-IEL = filter(graduacao,codigo=="7"|codigo=="57"|codigo=="18"|codigo=="75")
-IA = filter(graduacao,codigo=="26"|codigo=="25"|codigo=="64"|codigo=="23"|codigo=="22")
-FEF =filter(graduacao,codigo=="27"|codigo=="45")
-IC= filter(graduacao,codigo=="42"|codigo=="34")
-FEQ = filter(graduacao,codigo=="39"|codigo=="9")
-IB = filter(graduacao,codigo=="6"|codigo=="46")
-IQ = filter(graduacao, codigo=="5"|codigo=="50")
-IG = filter(graduacao,codigo=="53"|codigo=="54"|codigo=="55")
-FEAGRI = filter(graduacao, codigo=="8")
-FE = filter(graduacao,codigo=="20"|codigo=="38"|codigo=="56")
-PROFIS = filter(graduacao, codigo=="200")
-
-##adicionando coluna instituto
-IMECC<-mutate(IMECC,Instituto="IMECC")
-FEM<-mutate(FEM,Instituto="FEM")
-FCA<-mutate(FCA,Instituto="FCA")
-IFGW<-mutate(IFGW,Instituto="IFGW")
-IFCH<-mutate(IFCH,Instituto="IFCH")
-FEEC<-mutate(FEEC,Instituto="FEEC")
-FEC<-mutate(FEC,Instituto="FEC")
-FOP<-mutate(FOP,Instituto="FOP")
-FEA<-mutate(FEA,Instituto="FEA")
-FCM<-mutate(FCM,Instituto="FCM")
-IE<-mutate(IE,Instituto="IE")
-IA<-mutate(IA,Instituto="IEL")
-FEF<-mutate(FEF,Instituto="FEF")
-IC<-mutate(IC,Instituto="IC")
-FEQ<-mutate(FEQ,Instituto="FEQ")
-IB<-mutate(IB,Instituto="IB")
-IQ<-mutate(IQ,Instituto="IQ")
-IG<-mutate(IG,Instituto="IG")
-FEAGRI<-mutate(FEAGRI,Instituto="FEAGRI")
-FE<-mutate(FE,Instituto="FE")
-PROFIS<-mutate(PROFIS,Instituto="PROFIS")
-
-tabelageral=rbind(IMECC,FEM,FCA,IFGW,IFCH,FEEC,FEC,FOP,FEA,FCM,IE,IA,FEF,IC,FEQ,IB,IQ,IG,FEAGRI,FE,PROFIS)
-
-##criando novas colunas com proporções
-tabelageral<-mutate(tabelageral,"Proporção de Sim"=round((tabelageral$sim/tabelageral$total),3))
-tabelageral<-mutate(tabelageral,"Proporção de Não"=round((tabelageral$nao/tabelageral$total),3))
-
-##Exibindo a tabela geral - adição de institutos
-library(DT)
-datatable(tabelageral, options = list(pageLength = 10))
-```
-
-No gráfico abaixo podemos ver a proporção de votos em cada um dos institutos. O objetivo deste gráfico é podermos observar, separadamente, quais dos institutos tem mais votos a favor ou contra o movimento de greve.
-
-```{r, grafico comparativo, message=FALSE, echo=FALSE }
-porinstituto<-matrix(c(sum(IMECC$sim)/sum(IMECC$total),sum(IMECC$nao)/sum(IMECC$total),sum(IMECC$abstencao)/sum(IMECC$total),sum(FEM$sim)/sum(FEM$total),sum(FEM$nao)/sum(FEM$total),sum(FEM$abstencao)/sum(FEM$total),sum(FCA$sim)/sum(FCA$total),sum(FCA$nao)/sum(FCA$total),sum(FCA$abstencao)/sum(FCA$total),sum(IFGW$sim)/sum(IFGW$total),sum(IFGW$nao)/sum(IFGW$total),sum(IFGW$abstencao)/sum(IFGW$total),sum(IFCH$sim)/sum(IFCH$total),sum(IFCH$nao)/sum(IFCH$total),sum(IFCH$abstencao)/sum(IFCH$total),sum(FEEC$sim)/sum(FEEC$total),sum(FEEC$nao)/sum(FEEC$total),sum(FEEC$abstencao)/sum(FEEC$total),sum(FEC$sim)/sum(FEC$total),sum(FEC$nao)/sum(FEC$total),sum(FEC$abstencao)/sum(FEC$total),sum(FOP$sim)/sum(FOP$total),sum(FOP$nao)/sum(FOP$total),sum(FOP$abstencao)/sum(FOP$total),sum(FEA$sim)/sum(FEA$total),sum(FEA$nao)/sum(FEA$total),sum(FEA$abstencao)/sum(FEA$total),sum(FCM$sim)/sum(FCM$total),sum(FCM$nao)/sum(FCM$total),sum(FCM$abstencao)/sum(FCM$total),sum(IE$sim)/sum(IE$total),sum(IE$nao)/sum(IE$total),sum(IE$abstencao)/sum(IE$total),sum(IA$sim)/sum(IA$total),sum(IA$nao)/sum(IA$total),sum(IA$abstencao)/sum(IA$total),sum(FEF$sim)/sum(FEF$total),sum(FEF$nao)/sum(FEF$total),sum(FEF$abstencao)/sum(FEF$total),sum(IC$sim)/sum(IC$total),sum(IC$nao)/sum(IC$total),sum(IC$abstencao)/sum(IC$total),sum(FEQ$sim)/sum(FEQ$total),sum(FEQ$nao)/sum(FEQ$total),sum(FEQ$abstencao)/sum(FEQ$total),sum(IB$sim)/sum(IB$total),sum(IB$nao)/sum(IB$total),sum(IB$abstencao)/sum(IB$total),sum(IQ$sim)/sum(IQ$total),sum(IQ$nao)/sum(IQ$total),sum(IQ$abstencao)/sum(IQ$total),sum(IG$sim)/sum(IG$total),sum(IG$nao)/sum(IG$total),sum(IG$abstencao)/sum(IG$total),sum(FEAGRI$sim)/sum(FEAGRI$total),sum(FEAGRI$nao)/sum(FEAGRI$total),sum(FEAGRI$abstencao)/sum(FEAGRI$total),sum(FE$sim)/sum(FE$total),sum(FE$nao)/sum(FE$total),sum(FE$abstencao)/sum(FE$total),sum(PROFIS$sim)/sum(PROFIS$total),sum(PROFIS$nao)/sum(PROFIS$total),sum(PROFIS$abstencao)/sum(PROFIS$total)), nrow = 3, ncol=21)
-
-barplot(porinstituto,beside = TRUE, main = "Comparativo das proporções de Votos por Instituto", ylab = "Proporção de Votos", xlab = "Institutos", legend=colnames(exatas[5:7]),col=c("gray","darkblue","lightblue"),names.arg=c("IMECC","FEM","FCA","IFGW","IFCH","FEEC","FEC","FOP","FEA","FCM","IE","IA","FEF","IC","FEQ","IB","IQ","IG","FEAGRI","FE","PROFIS"),cex.lab=0.9,cex.names = 0.5)
-
-```
-
-Podemos ver que, na grande maioria dos institutos, a proporção de votos contrários a greve é maior do que a proporção de alunos a favor.
-
-###Proporção Geral de Votos da Graduação
-
-O gráfico abaixo mostra a proporção de votos "sim", "não" e "abstenção" dos alunos da graduação.
-
-```{r, message=FALSE, echo=FALSE}
-pie(c(sum(graduacao$sim)/sum(graduacao$total),sum(graduacao$nao)/sum(graduacao$total),sum(graduacao$abstencao)/sum(graduacao$total)), labels = c("30,79%", "65,51%", "3,70%"),radius = 1, ylim=c(0,1), col=c("gray","darkblue","lightblue"), main="Gráfico de setores a proporção de Votos da Graduação")
-legend("bottomright", fill = c("gray","darkblue","lightblue"), legend = c("Sim", "Não", "Abstenções"))
-```
-
-Ao analisarmos estes gráficos podemos concluir que, segundo a pesquisa, a maioria dos alunos dos cursos de graduação da Unicamp são contrários ao movimento da greve estudantil. O que revela uma contadição com a atual condição da universidade, que tem 18 dos seus institutos em greve.
-
-###Teste de Hipótese para proporção
-
-Dado que, nos gráficos e tabelas anteriores, observamos que a proporção de votos "não" é maior que a proporção de votos "sim", queremos testar se essa proporção amostral é suficiente para dizermos que o opinião populacional também é contrária a greve. Para isso vamos realizar um teste de hipóteses para essas proporções.
-
-Para fazer esse tipo de teste definimos duas hipóteses $H_0$ e $H_1$, que são chamadas respectivamente de hipótese nula e hipótese alternativa. No nosso caso $H_0$: proporção de sim >ou= 50% e $H_1$: proporção de sim < 50%
-
-Definidas essas hipóteses, buscamos, nos dados, evidências a favor de uma delas.Para isso definimos um valor ($\alpha$)=0.05 que é a probabilidade de rejeitarmos a hipótese nula quando ela é verdadeira, ou seja, em 5% das vezes que fizermos esse teste iremos dizer que a proporção de votos "sim" é menos que 50%, quando, de fato, não é.
-
-No nosso teste rejeitaremos $H_0$ quando o p-valor for menor que 0.05
-
-```{r teste de hipotese para proporçao, echo=FALSE}
-t=sum(graduacao$total)
-s=sum(graduacao$sim)
-n=sum(graduacao$nao)
-
-x=matrix(c(s,n),1,2)
-teste1=prop.test(x,p=0.5,alternative = "less", conf.level = 0.95)
-teste1
-```
-
-Dado que o p-valor do nosso teste é $1.383e-13$ rejeitamos a hipótese nula e concluimos que a proporção de votos "sim" na graduação não é maior que 50%
-
-###Tamanho amostral por curso de Graduação
-
-O tamanho amostral foi determinado através da fórmula para amostra aleatória simples sem reposição, sendo $p=\frac{1}{2}$ (pior caso):
-
-$$ n=\frac{N}{(4(N-1)D+1)} $$
-
-sendo $D=B²/z²$.
-
-Definimos $B=0.1$, ou seja, o erro será de no máximo 10% e $Z=1.96$, pois aproximamos nossa distribuição para uma normal padrão com 95% de significância, o que nos deu os tamanhos amostrais presentes na tabela abaixo.
-
-```{r calculo do tamanho amostral, echo=FALSE}
-##filtrando curso por curso
-curso1<-filter(graduacao, codigo=="1")
-curso10<-filter(graduacao, codigo=="10")
-curso101<-filter(graduacao, codigo=="101")
-curso102<-filter(graduacao, codigo=="102")
-curso108<-filter(graduacao, codigo=="108")
-curso11<-filter(graduacao, codigo=="11")
-curso12<-filter(graduacao, codigo=="12")
-curso13<-filter(graduacao, codigo=="13")
-curso2<-filter(graduacao, codigo=="2")
-curso28<-filter(graduacao, codigo=="28")
-curso29<-filter(graduacao, codigo=="29")
-curso34<-filter(graduacao, codigo=="34")
-curso36<-filter(graduacao, codigo=="36")
-curso39<-filter(graduacao, codigo=="39")
-curso4<-filter(graduacao, codigo=="4")
-curso40<-filter(graduacao, codigo=="40")
-curso41<-filter(graduacao, codigo=="41")
-curso42<-filter(graduacao, codigo=="42")
-curso43<-filter(graduacao, codigo=="43")
-curso48<-filter(graduacao, codigo=="48")
-curso49<-filter(graduacao, codigo=="49")
-curso5<-filter(graduacao, codigo=="5")
-curso50<-filter(graduacao, codigo=="50")
-curso51<-filter(graduacao, codigo=="51")
-curso53<-filter(graduacao, codigo=="53")
-curso8<-filter(graduacao, codigo=="8")
-curso89<-filter(graduacao, codigo=="89")
-curso9<-filter(graduacao, codigo=="9")
-curso100<-filter(graduacao, codigo=="100")
-curso107<-filter(graduacao, codigo=="107")
-curso14<-filter(graduacao, codigo=="14")
-curso15<-filter(graduacao, codigo=="15")
-curso27<-filter(graduacao, codigo=="27")
-curso45<-filter(graduacao, codigo=="45")
-curso46<-filter(graduacao, codigo=="46")
-curso58<-filter(graduacao, codigo=="58")
-curso6<-filter(graduacao, codigo=="6")
-curso63<-filter(graduacao, codigo=="63")
-curso109<-filter(graduacao, codigo=="109")
-curso16<-filter(graduacao, codigo=="16")
-curso17<-filter(graduacao, codigo=="17")
-curso18<-filter(graduacao, codigo=="18")
-curso19<-filter(graduacao, codigo=="19")
-curso38<-filter(graduacao, codigo=="38")
-curso44<-filter(graduacao, codigo=="44")
-curso47<-filter(graduacao, codigo=="47")
-curso55<-filter(graduacao, codigo=="55")
-curso56<-filter(graduacao, codigo=="56")
-curso7<-filter(graduacao, codigo=="7")
-curso75<-filter(graduacao, codigo=="75")
-curso22<-filter(graduacao, codigo=="22")
-curso26<-filter(graduacao, codigo=="26")
-curso64<-filter(graduacao, codigo=="64")
-
-##criando coluna com numero de matriculados
-curso1<-mutate(curso1,n_matriculados="67")
-curso10<-mutate(curso10,n_matriculados="891")
-curso101<-mutate(curso101,n_matriculados="363")
-curso102<-mutate(curso102,n_matriculados="361")
-curso108<-mutate(curso108,n_matriculados="30")
-curso11<-mutate(curso11,n_matriculados="426")
-curso12<-mutate(curso12,n_matriculados="515")
-curso13<-mutate(curso13,n_matriculados="467")
-curso2<-mutate(curso2,n_matriculados="312")
-curso28<-mutate(curso28,n_matriculados="75")
-curso29<-mutate(curso29,n_matriculados="271")
-curso34<-mutate(curso34,n_matriculados="572")
-curso36<-mutate(curso36,n_matriculados="244")
-curso39<-mutate(curso39,n_matriculados="348")
-curso4<-mutate(curso4,n_matriculados="277")
-curso40<-mutate(curso40,n_matriculados="171")
-curso41<-mutate(curso41,n_matriculados="667")
-curso42<-mutate(curso42,n_matriculados="306")
-curso43<-mutate(curso43,n_matriculados="712")
-curso48<-mutate(curso48,n_matriculados="209")
-curso49<-mutate(curso49,n_matriculados="345")
-curso5<-mutate(curso5,n_matriculados="402")
-curso50<-mutate(curso50,n_matriculados="254")
-curso51<-mutate(curso51,n_matriculados="304")
-curso53<-mutate(curso53,n_matriculados="156")
-curso8<-mutate(curso8,n_matriculados="426")
-curso89<-mutate(curso89,n_matriculados="245")
-curso9<-mutate(curso9,n_matriculados="285")
-curso100<-mutate(curso100,n_matriculados="284")
-curso107<-mutate(curso107,n_matriculados="257")
-curso14<-mutate(curso14,n_matriculados="386")
-curso15<-mutate(curso15,n_matriculados="712")
-curso27<-mutate(curso27,n_matriculados="289")
-curso45<-mutate(curso45,n_matriculados="307")
-curso46<-mutate(curso46,n_matriculados="244")
-curso58<-mutate(curso58,n_matriculados="130")
-curso6<-mutate(curso6,n_matriculados="250")
-curso63<-mutate(curso63,n_matriculados="227")
-curso109<-mutate(curso109,n_matriculados="182")
-curso16<-mutate(curso16,n_matriculados="342")
-curso17<-mutate(curso17,n_matriculados="360")
-curso18<-mutate(curso18,n_matriculados="107")
-curso19<-mutate(curso19,n_matriculados="205")
-curso38<-mutate(curso38,n_matriculados="468")
-curso44<-mutate(curso44,n_matriculados="351")
-curso47<-mutate(curso47,n_matriculados="215")
-curso55<-mutate(curso55,n_matriculados="103")
-curso56<-mutate(curso56,n_matriculados="146")
-curso7<-mutate(curso7,n_matriculados="163")
-curso75<-mutate(curso75,n_matriculados="114")
-curso22<-mutate(curso22,n_matriculados="364")
-curso26<-mutate(curso26,n_matriculados="112")
-curso64<-mutate(curso64,n_matriculados="147")
-
-
-NumeroMatriculados = rbind(curso1, curso10, curso101, curso102, curso108,curso11, curso12, curso13, curso2, curso28, curso29, curso34, curso36,curso39, curso4, curso40, curso41, curso42, curso43, curso48, curso49, curso5,curso50,curso51,curso53,curso8,curso89,curso9,curso100,curso107,curso14,curso15,curso27,curso45,curso46,curso58,curso6,curso63,curso109,curso16,curso17,curso18,curso19,curso38,curso44,curso47,curso55,curso56,curso7,curso75,curso22,curso26,curso64)
-
-tabelatamamostral<-data.frame(NumeroMatriculados$codigo, NumeroMatriculados$curso,NumeroMatriculados$n_matriculados,NumeroMatriculados$total)
-
-##calculo do tamanho amostral
-B = 0.1
-z = 1.96
-D = (B/z)^2
-
-N<-c(as.numeric(NumeroMatriculados$n_matriculados))
-
-N2=N-1
-
-tamamostral=round(N/(4*(N2)*D+1),0)
-
-tabelatamamostral<-mutate(tabelatamamostral,"Tamanho Amostral"=tamamostral)
-colnames(tabelatamamostral)=c("Código","Curso","Número de Matriculados","Total de Votos","Tamanho Amostral")
-
-datatable(tabelatamamostral, options = list(pageLength = 100))
-```
-
-Observando a tabela acima, podemos ver que em todos os cursos, o número de votos registrados nesta pesquisa não atinge o valor do tamanho amostral calculado,o que deixa claro que os dados são viesados e não representam a população de alunos regularmente matriculados nos curso de graduação da UNICAMP.
-
-# Separação por áreas na pós-graduação
-Apesar da greve estudantil ser articulada pelos estudantes da graduação, achamos válido fazer uma análise dos estudantes da pós-graduação, separados em Mestrado e Doutorado para saber se a opinião destes é semelhante à dos alunos da graduação em suas respectivas áreas, levando em conta que o movimento estudantil tem ganhado força e, com isso, interfere também em suas vidas acadêmicas.
-
-## Análises para Mestrado
-
-###Análise do Mestrado por Área
-
-###Tabela de Dados para Mestrado
-
-Na tabela abaixo, filtramos apenas os dados referente aos cursos de *Mestrado* e adicionamos uma coluna com a àrea correspondente de cada curso, e duas colunas com as proporções de votos favoráveis e não favoráveis á greve, respectivamente.
-
-```{r, message=FALSE, echo=FALSE}
-
-library(dplyr)
-mestrado=filter(mytbl, nivel=="Mestrado")
-
-##ARTES
-artesm=filter(mestrado,codigo=="87"|codigo=="88"|codigo=="30"|codigo=="73")
-##HUMANAS
-humanasm=filter(mestrado,codigo=="20"|codigo=="86"|codigo=="53"|codigo=="17"|codigo=="81"|codigo=="18"|codigo=="40"|codigo=="7"|codigo=="36"|codigo=="37"|codigo=="75"|codigo=="24"|codigo=="19"|codigo=="80"|codigo=="38"|codigo=="54"|codigo=="26"|codigo=="79"|codigo=="41")
-##BIOLÓGICAS
-biologicasm=filter(mestrado,codigo=="84"|codigo=="91"|codigo=="92"|codigo=="49"|codigo=="58"|codigo=="35"|codigo=="42"|codigo=="74"|codigo=="51"|codigo=="50"|codigo=="44"|codigo=="90"|codigo=="48"|codigo=="28"|codigo=="59"|codigo=="67"|codigo=="23"|codigo=="71"|codigo=="70"|codigo=="14"|codigo=="69"|codigo=="83"|codigo=="65"|codigo=="61"|codigo=="60"|codigo=="63"|codigo=="64"|codigo=="62")
-##EXATAS
-exatasm=filter(mestrado,codigo=="47"|codigo=="56"|codigo=="57"|codigo=="55"|codigo=="8"|codigo=="89"|codigo=="12"|codigo=="11"|codigo=="72"|codigo=="10"|codigo=="39"|codigo=="9"|codigo=="82"|codigo=="3"|codigo=="4"|codigo=="2"|codigo=="1"|codigo=="29"|codigo=="5")
-
-```
-
-```{r, message=FALSE, echo=FALSE}
-#*#criandonovacoluna com areas
-
-library(dplyr)
-exatasm<-mutate(exatasm,Area="Exatas")
-biologicasm<-mutate(biologicasm,Area="Biológicas")
-humanasm<-mutate(humanasm,Area="Humanas")
-artesm<-mutate(artesm,Area="Artes")
-tabelageralm=rbind(exatasm,biologicasm,humanasm,artesm)
-
-##Exibindo a tabela geral mestrado
-library(DT)
-datatable(tabelageralm, options = list(pageLength = 10))
-```
-
-###Gráfico das proporções por Área
-
-```{r,echo=FALSE }
-proporcaoaream<-matrix(c(sum(exatasm$sim)/sum(exatasm$total),sum(exatasm$nao)/sum(exatasm$total),sum(exatasm$abstencao)/sum(exatasm$total),sum(humanasm$sim)/sum(exatasm$total),sum(humanasm$nao)/sum(humanasm$total),sum(humanasm$abstencao)/sum(humanasm$total),sum(biologicasm$sim)/sum(biologicasm$total),sum(biologicasm$nao)/sum(biologicasm$total),sum(biologicasm$abstencao)/sum(biologicasm$total),sum(artesm$sim)/sum(artesm$total),sum(artesm$nao)/sum(artesm$total),sum(artesm$abstencao)/sum(artesm$total)), nrow = 3, ncol=4)
-
-barplot(proporcaoaream,beside = TRUE, names.arg=c("Exatas","Humanas","Biológicas","Artes"),main = "Comparativo das proporções de 'Sim' por Área", ylab = "Total de Votos", xlab = "Áreas", legend=colnames(exatasm[5:7]),col=c("gray","darkblue","lightblue"))
-```
-
-###Proporção Geral de Votos do Mestrado
-
-```{r, message=FALSE, echo=FALSE}
-pie(c(sum(mestrado$sim)/sum(mestrado$total),sum(mestrado$nao)/sum(mestrado$total),sum(mestrado$abstencao)/sum(mestrado$total)), labels = c("22,22%", "77,78%", "0%"),radius = 1, ylim=c(0,1), col=c("gray","darkblue","lightblue"), main="Gráfico de setores a proporção de Votos do Mestrado")
-legend("bottomright", fill = c("gray","darkblue","lightblue"), legend = c("Sim", "Não", "Abstenções"))
-```
-
-Como o tamanho da amostra de votos do mestrado é pequeno, não podemos ter respostas certeiras sobre a opinião destas pessoas, contudo os resultados tendem a serem similares com os alunos da graduação.
-
-###Teste de Hipótese 
-
-Assim como fizemos para a graduação, faremos um teste de hipóteses para a proporção de votos do mestrado utilizando as mesmas hipoteses e o mesmo ($\alpha$), ou seja: $H_0$: proporção de sim >ou= 50% e $H_1$: proporção de sim < 50% e ($\alpha$)=0.05.
-Rejeitamos $H_0$ se o p-valor for menor que 0,05
-
-```{r , echo=FALSE}
-tm=sum(mestrado$total)
-sm=sum(mestrado$sim)
-nm=sum(mestrado$nao)
-
-y=matrix(c(sm,nm),1,2)
-teste2=prop.test(y,p=0.5,alternative = "less", conf.level = 0.95)
-teste2
-```
-
-Dado que o p-valor do nosso teste é $0.01695$ rejeitamos $H_0$ e concluimos que a proporção de votos "sim" no mestrado não é maior que 50%
-
-##Análises para Doutorado
-
-###Tabela de Dados para Doutorado
-
-Na tabela abaixo, filtramos apenas os dados referente aos cursos de *Doutorado* e adicionamos uma coluna com a àrea correspondente de cada curso, e duas colunas com as proporções de votos favoráveis e não favoráveis á greve, respectivamente.
-
-```{r separação por areas, message=FALSE, echo=FALSE}
-library(dplyr)
-doutorado=filter(mytbl, nivel=="Doutorado")
-
-##ARTES
-artesd=filter(doutorado,codigo=="105"|codigo=="106"|codigo=="2"|codigo=="22")
-##HUMANAS
-humanasd=filter(doutorado,codigo=="21"|codigo=="67"|codigo=="67"|codigo=="68"|codigo=="93"|codigo=="57"||codigo=="28"|codigo=="25"|codigo=="30"|codigo=="66"|codigo=="94"|codigo=="74"|codigo=="69"|codigo=="103"|codigo=="27"|codigo=="26"|codigo=="76"|codigo=="24"|codigo=="95"|codigo=="70"|codigo=="102")
-##BIOLÓGICAS
-biologicasd=filter(doutorado,codigo=="33"|codigo=="89"|codigo=="8"|codigo=="75"|codigo=="97"|codigo=="23"|codigo=="104"|codigo=="90"|codigo=="87"|codigo=="36"|codigo=="91"|codigo=="78"|codigo=="100"|codigo=="16"|codigo=="73"|codigo=="20"|codigo=="19"|codigo=="64"|codigo=="18"|codigo=="101"|codigo=="14"|codigo=="10"|codigo=="9"|codigo=="12"|codigo=="13"|codigo=="11")
-##EXATAS
-exatasd=filter(doutorado,codigo=="81"|codigo=="34"|codigo=="6"|codigo=="7"|codigo=="5"|codigo=="58"|codigo=="32"|codigo=="62"|codigo=="61"|codigo=="98"|codigo=="60"|codigo=="92"|codigo=="59"|codigo=="35"|codigo=="53"|codigo=="54"|codigo=="31"|codigo=="51"|codigo=="79"|codigo=="55")
-```
-
-```{r criando nova coluna areas, message=FALSE, echo=FALSE}
-##criandonovacoluna
-library(dplyr)
-exatasd<-mutate(exatasd,Area="Exatas")
-biologicasd<-mutate(biologicasd,Area="Biológicas")
-humanasd<-mutate(humanasd,Area="Humanas")
-artesd<-mutate(artesd,Area="Artes")
-tabelagerald=rbind(exatasd,biologicasd,humanasd,artesd)
-
-library(DT)
-datatable(tabelagerald, options = list(pageLength = 10))
-```
-
-###Gráfico das proporções por Área
-
-```{r,echo=FALSE }
-proporcaoaread<-matrix(c(sum(exatasd$sim)/sum(exatasd$total),sum(exatasd$nao)/sum(exatasd$total),sum(exatasd$abstencao)/sum(exatasd$total),sum(humanasd$sim)/sum(exatasd$total),sum(humanasd$nao)/sum(humanasd$total),sum(humanasd$abstencao)/sum(humanasd$total),sum(biologicasd$sim)/sum(biologicasd$total),sum(biologicasd$nao)/sum(biologicasd$total),sum(biologicasd$abstencao)/sum(biologicasd$total),sum(artesd$sim)/sum(artesd$total),sum(artesd$nao)/sum(artesd$total),sum(artesd$abstencao)/sum(artesd$total)), nrow = 3, ncol=4)
-
-barplot(proporcaoaread,beside = TRUE, names.arg=c("Exatas","Humanas","Biológicas","Artes"),main = "Comparativo das proporções de 'Sim' por Área", ylab = "Total de Votos", xlab = "Áreas", legend=colnames(exatasd[5:7]),col=c("gray","darkblue","lightblue"))
-```
-
-Os alunos de doutorado seguem o mesmo padrão dos de mestrado e graduação. Apesar dos poucos votos, os gráficos de exatas e biológicas acima indicam que os alunos destas áreas são contrários a greve.
-
-###Proporção Geral de Votos do Doutorado
-
-```{r, message=FALSE, echo=FALSE}
-pie(c(sum(doutorado$sim)/sum(doutorado$total),sum(doutorado$nao)/sum(doutorado$total),sum(doutorado$abstencao)/sum(doutorado$total)), labels = c("17,39%", "78,26%", "4,35%"),radius = 1, ylim=c(0,1), col=c("gray","darkblue","lightblue"), main="Gráfico de setores a proporção de Votos do Doutorado")
-legend("bottomright", fill = c("gray","darkblue","lightblue"), legend = c("Sim", "Não", "Abstenções"))
-```
-
-###Teste de Hipótese
-
-Assim como fizemos para a graduação e para o mestrado, faremos um teste de hipóteses para a proporção de votos do doutorado utilizando as mesmas hipoteses e o mesmo ($\alpha$), ou seja: $H_0$: proporção de sim >ou= 50% e $H_1$: proporção de sim < 50% e ($\alpha$)=0.05.
-Rejeitamos $H_0$ se o p-valor for menor que 0.05
-
-```{r , echo=FALSE}
-td=sum(doutorado$total)
-sd=sum(doutorado$sim)
-nd=sum(doutorado$nao)
-
-z=matrix(c(sd,nd),1,2)
-teste3=prop.test(z,p=0.5,alternative = "less", conf.level = 0.95)
-teste3
-```
-
-Dado que o p-valor do nosso teste é $0.002789$ rejeitamos $H_0$ e concluimos que a proporção de votos "sim" no doutorado não é maior que 50%
-
-```{r plot_gauge, echo=FALSE}
+```{r plot_gauge}
 tbl0 = subset(mytbl, nivel=='Graduacao')
 tbl0$pnao = round(tbl0$nao/tbl0$total*100, 0)
 gauge = gvisGauge(tbl0[, c('curso', 'pnao')], 'curso', 'nao',
                   options=list(min=0, max=100, greenFrom=0,
                                  greenTo=20, yellowFrom=40, yellowTo=60,
                                  redFrom=80, redTo=100, width=400, height=300))
-#plot(gauge)
+plot(gauge)
 ```
 
-## Obtenção de Dados Geográficos
+## ObtenÃ§Ã£o de Dados GeogrÃ¡ficos
 
-Esse mapa mostra a localização de cada um dos institutos da Unicamp mencionados no trabalho.
+Obter localizaÃ§Ãµes (lat/lon) por meio do OpenStreet Maps:
 
-```{r enderecos, message=FALSE, echo=FALSE}
-ends = data.frame(instituto=c('IMECC', 'FEM', 'FEF', 'IA' , 'IEL' , 'IFCH' , 'IFGW', 'IQ' , 'IB' , 'FEEC' , 'FEQ' , 'FE' , 'IE' , 'IC' , 'FEC' , 'FEAGRI' , 'FCM', 'IG' , 'FEA'),
-lat=c(-22.81583,-22.81938,-22.81476,-22.815127,-22.815121,-22.814924,-22.816778,-22.818993,-22.819333,-22.821286,-22.820336,-22.816466, -22.814952,-22.814663,-22.816503,-22.819405,-22.831345,-22.813084,-22.820475),
-lon=c(-47.06769,-47.06592,-47.07333,-47.070112,-47.069397,-47.068303,-47.067328,-47.068038,-47.069402,-47.065894,-47.065617,-47.065728,-47.066153,-47.064811,-47.061943,-47.060955,-47.062188,-47.068574,-47.067189))
+- Abrir OpenStreet Maps (OSM) em (http://www.openstreetmap.org/#map=16/-22.8173/-47.0677)
+- Dar zoom mÃ¡ximo no instituto de interesse
+- Olhar o endereÃ§o na barra de endereÃ§o apÃ³s o zoom
+- Atualizar o arquivo `institutos.tab` (separado por tabulaÃ§Ãµes) abaixo com as novas informaÃ§Ãµes
+
+```{r enderecos}
+ends = read.table('institutos.tab', sep='\t', header=TRUE)
 map = leaflet()
 map = addTiles(map)
-map = addCircleMarkers(map, lat=ends$lat, lng=ends$lon, popup = ends$instituto, color = "orange")
+map = addCircleMarkers(map, lat=ends$lat, lng=ends$lon, popup = ends$instituto)
 map
 ```
 
-## Intervalos de Confiança
-
-Abaixo colocamos uma tabela com os intervalos de confiaça para a proporção de votos não para cada curso. Um intervalo de confinança significa a cada 100 vezes que essa pesquisa for feita, em média em 95 delas a proporção de "nãos" estará dentro desse intervalo.
+## Intervalos de ConfianÃ§a
 
 ```{r stats}
 p = with(mytbl, nao/(total))
@@ -570,17 +74,5 @@ mes = qnorm(.975)*sqrt(1/(4*mytbl$total))
 ics = cbind(pmax(p-mes, 0), pmin(p+mes, 1))
 colnames(ics) = c("lower", "upper")
 mytbl$p = p
-tabelaIC<- data.frame(mytbl$codigo,mytbl$nivel, mytbl$curso,mytbl$p)
-tabelaic2 = cbind(tabelaIC, ics)
-colnames(tabelaic2)=c("Código", "Nível", "Total","p","Limite Inferior","Limite Superior")
-datatable(tabelaic2, options = list(pageLength = 10))
+mytbl = cbind(mytbl, ics)
 ```
-
-## Conclusão
-Primeiramente é preciso esclarecer que os resultados aqui apresentados não são representativos da nossa população, já que os dados, possivelmente são viesados pelo fato da pesquisa não ser anônima, o que pode causar receio nos alunos que são favoráveis a greve. Para registrar o voto é preciso se identificar, fornecendo o seu primeiro nome, curso, RG, e RA o que deixa tais alunos expostos aos docentes que terão acesso a essa pesquisa. Além disso, como foi mostrado acima, nenhum dos cursos que responderam a votação atingiu o número amostral minimo para se ter dados com nível de confiança de 95%.
-Dito isto apresentaremos os resultados que obtivemos na análise de dados, reiterando o fato de que estes resultados não representam a população.
-
-Diante de nossas análises e interpretações de gráficos e tabelas, notamos que os alunos de exatas e biológicas, em sua maioria, tendem a serem contrários a greve, enquanto os alunos de humanas e artes são a favor, o que, provavelmente, se deve ao fato desses cursos estarem diretamente ligados às questões sociais.
-Até o momento mais da metade dos institutos da UNICAMP estão em greve o que revela um contraste com os resultados da pesquisa, e, além disso evidencia um fato que, por motivos como os relatados anteriormente, tem sido fortemente questionado por docentes e estudantes: a não representatividade das assembléias.
-
-Por fim concluimos que é de extrema importância que cada aluno se posicione a respeito das pautas de greve participando ativamente dos eventos, assembléias e votações online, afim de que se conheça a verdadeira opinião dos estudantes da universidade a respeiro do tema.
